tests/NormalTests/paczka2/big_fuzzy/25965581.err
Error in line 1: 6iYrBEIyq A124 72,7
Error in line 8: 6iYrBEIyq S916 65,2
Error in line 12: 6iYrBEIyq S530 142,43
Error in line 13: S91H A124 H,8
Error in line 10: MYt6e S530 21,2
Error in line 17: S916 A124 341,1
Error in line 14: ssjuYHDL A124 35,5
Error in line 22: MYt6e S793 92,7
Error in line 39: S916 A124 8,9
Error in line 46: 2uJ S793 10,4
Error in line 45: S916 S530 13,5
Error in line 40: moJW S530 13,6
Error in line 55: S916 S916 57,9
Error in line 34: MYt6e A124 36,9
Error in line 61: S916 S530 14,5
Error in line 68: S916 A124 73,7
Error in line 71: S916 S793 58,2
Error in line 32: 6iYrBEIyq S530 163,9
Error in line 76: 2uJ S530 86,0
Error in line 64: moJW S916 81,1
Error in line 83: moJW S793 15,0
Error in line 87: moJW S916 65,5
Error in line 85: COuArd S793 81,6
Error in line 111: S916 S916 79,~
Error in line 86: 2uJ S793 68,6
Error in line 105: MYt6e S530 10,6
Error in line 119: S916 S916 303,2
Error in line 130: moJW S79D DDD,6
Error in line 126: S916 S793 66,8
Error in line 128: 2uJ S793 47,4
Error in line 127: moJW S793 99,3
Error in line 134: 2uJ S916 27,1
Error in line 143: 2uJ S793 1,5
Error in line 110: ssjuYHDL A124 26,7
Error in line 153: moJW A124 72,2
Error in line 189: S916 S530 74,7
Error in line 203: ssjuYHDL S793 56,1
Error in line 214: COuArd S530 -2,4
Error in line 195: moJW S916 28,9
Error in line 209: MYt6e A124 19,1
Error in line 228: COuArd S530 178,0
Error in line 227: 2uJ S530 55,3
Error in line 230: 2uJ S793 99,0
